--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,7 @@
 
     "configurations": [
         
+        
         {
             "console": "integratedTerminal",
             "type": "node",
@@ -14,7 +15,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\In-class1.js"
+            "program": "${workspaceFolder}\\inclass2"
         }
     ]
 }
